--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "electron/main.cjs",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 5500",
+    "dev:local": "vite",
     "dev:api": "npm --prefix server run dev",
     "migrate": "npm --prefix server run migrate",
     "build": "vite build",
     "build:railway": "npm install && npm --prefix server install && npm run build && npm --prefix server run migrate",
     "start:railway": "npm --prefix server start",
+    "electron:start": "electron .",
+    "electron:dev": "npm run build && electron .",
+    "electron:dist": "npm run build && electron-builder --win nsis",
+    "electron:pack": "npm run build && electron-builder --win portable",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port 5500"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -19,10 +25,15 @@
     "@supabase/supabase-js": "^2.57.4",
     "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.19",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "framer-motion": "^12.12.2",
     "globals": "^16.4.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
+    "pg": "^8.13.1",
     "postcss": "^8.4.49",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -42,10 +53,46 @@
     "@rollup/rollup-win32-x64-msvc": "^4.57.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "electron": "^35.0.0",
+    "electron-builder": "^25.1.8",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0"
+  },
+  "build": {
+    "appId": "com.hospital.labinventory.desktop",
+    "productName": "Lab Inventory Desktop",
+    "asar": true,
+    "directories": {
+      "output": "release/electron"
+    },
+    "files": [
+      "dist/**/*",
+      "server/.env.example",
+      "server/src/**/*",
+      "server/scripts/**/*",
+      "server/migrations/**/*",
+      "electron/**/*",
+      "package.json",
+      "package-lock.json"
+    ],
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "perMachine": false
+    }
   }
 }
